--- a/python/notebooks/python-basics-review.ipynb
+++ b/python/notebooks/python-basics-review.ipynb
@@ -5,7 +5,7 @@
    "id": "6865672c",
    "metadata": {},
    "source": [
-    "# Review Python Basic\n",
+    "# Python Basics - Review\n",
     "The purpose of this file is to serve as a refresher.\n",
     "\n",
     "## Console Output"
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "e02526eb",
    "metadata": {
     "language_info": {
@@ -23,21 +23,10 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "too easy to forget\n",
-      "with: abc!\n",
-      "without: {e}\n",
-      "flush->\n",
-      "a->b->c\n",
-      "a->b->cabc!"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Output\n",
+    "\n",
     "# print()\n",
     "print(\"too easy to forget\")\n",
     "e = f\"abc!\"\n",
@@ -46,28 +35,31 @@
     "print(\"flush->\",flush=True)\n",
     "print(\"a\",\"b\",\"c\",sep=\"->\", end=\"\\n\")\n",
     "print(\"a\",\"b\",\"c\",sep=\"->\",end=e)\n",
-    "\n",
+    "print()\n",
     "from datetime import datetime\n",
-    "print(datetime.now(),\"This should print to a file.\",file=open(\"test.txt\",\"w\"))\n"
+    "print(datetime.now(),\"This should print to a file.\",file=open(\"test.txt\",\"w\"))\n",
+    "\n",
+    "print(\".**\"*10)\n",
+    "\n",
+    "print(\"\\\"\")\n",
+    "print('\"')\n",
+    "print('\\'')\n",
+    "print(\"'\")\n",
+    "\n",
+    "\n",
+    "## print with formatter\n",
+    "\n",
+    "formatter = \"\\t{}->{}->{}->{}\\n\\n\"\n",
+    "print(formatter.format(1,2,3,4))\n",
+    "print(formatter.format(True,True,True,False))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "e89af062",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'this is the third expression statement. this is the second expression statement'"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# expression statemets\n",
     "f\"this is the first expression statement\"\n",
@@ -77,20 +69,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "332b2e6b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'This is using display.'"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# display\n",
     "display(\"This is using display.\")"
@@ -98,21 +80,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c8c36c02",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'0.3333333333333333'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "str(1/3)"
    ]
@@ -122,21 +93,88 @@
    "execution_count": null,
    "id": "6c0426b4",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "# repr\n",
+    "repr(1/3)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8682f49e",
+   "metadata": {},
+   "source": [
+    "## Console input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19a8a9d7",
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Input a number:\n",
+      "-1\n",
+      "word\n",
+      "Provide another word:\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
-       "'0.3333333333333333'"
+       "'5'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "# repr\n",
-    "repr(1/3)\n"
+    "print(\"Input a number\",end=\":\\n\")\n",
+    "input_num = -1\n",
+    "#input_num = input()\n",
+    "print(input_num)\n",
+    "\n",
+    "word = \"word\"\n",
+    "#word = input(\"Type a word:\")\n",
+    "print(word)\n",
+    "\n",
+    "prompt = \"-->\"\n",
+    "print(\"Provide another word\", end=\":\\n\")\n",
+    "#input(prompt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2bb13293",
+   "metadata": {},
+   "source": [
+    "---\n",
+    "## Variables"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "28be07ec",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a = 1\n",
+    "b = 2.2\n",
+    "c = 1.2e3\n",
+    "z = 0\n",
+    "\n",
+    "print(a*b)\n",
+    "print(a*c)\n",
+    "print(b*c)\n",
+    "print(z//a) # <- integer division\n",
+    "print(z/a)"
    ]
   }
  ],
