Review file management methods.

--- a/python/notebooks/python-basics-review.ipynb
+++ b/python/notebooks/python-basics-review.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "e02526eb",
    "metadata": {
     "language_info": {
@@ -23,7 +23,31 @@
      "kernelName": "csharp"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "too easy to forget\n",
+      "with: abc!\n",
+      "without: {e}\n",
+      "flush->\n",
+      "a->b->c\n",
+      "a->b->cabc!\n",
+      ".**.**.**.**.**.**.**.**.**.**\n",
+      "\"\n",
+      "\"\n",
+      "'\n",
+      "'\n",
+      "\t1->2->3->4\n",
+      "\n",
+      "\n",
+      "\tTrue->True->True->False\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Output\n",
     "\n",
@@ -56,10 +80,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "e89af062",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'this is the third expression statement. this is the second expression statement'"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# expression statemets\n",
     "f\"this is the first expression statement\"\n",
@@ -69,10 +104,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "332b2e6b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'This is using display.'"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# display\n",
     "display(\"This is using display.\")"
@@ -80,22 +125,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c8c36c02",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.3333333333333333'"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "str(1/3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "6c0426b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'0.3333333333333333'"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# repr\n",
     "repr(1/3)\n"
    ]
   },
@@ -109,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "19a8a9d7",
    "metadata": {},
    "outputs": [
@@ -122,16 +188,6 @@
       "word\n",
       "Provide another word:\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "'5'"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -160,10 +216,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "28be07ec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.2\n",
+      "1200.0\n",
+      "2640.0\n",
+      "0\n",
+      "0.0\n"
+     ]
+    }
+   ],
    "source": [
     "a = 1\n",
     "b = 2.2\n",
@@ -175,6 +243,71 @@
     "print(b*c)\n",
     "print(z//a) # <- integer division\n",
     "print(z/a)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c5b27800",
+   "metadata": {},
+   "source": [
+    "## File Management"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ed5e76f7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<_io.TextIOWrapper name='test.txt' mode='w+' encoding='cp1252'>\n",
+      "read 1: \tline 1:This is the first test string\n",
+      "\t\tline 2\n",
+      "\t\tline 3\n",
+      "read 2: \n",
+      "read 3: \tline 1\n",
+      "read 4: :This is the first test string\n",
+      "\n",
+      "read 5: \tline 1:This is the first test string\n",
+      "\n",
+      "read 6: ['This is the second test string.\\n', 'line2\\n', 'line3']\n",
+      "read 7: ['This is the second test string.\\n']\n",
+      "read 8: ['line2\\n']\n",
+      "read 9: ['line3']\n",
+      "read 10: []\n"
+     ]
+    }
+   ],
+   "source": [
+    "some_file = open(\"test.txt\",\"w+\")\n",
+    "some_file.write(\"\\tline 1:This is the first test string\\n\\t\\tline 2\\n\\t\\tline 3\")\n",
+    "some_file.flush()\n",
+    "some_file.seek(0)\n",
+    "print(some_file)\n",
+    "\n",
+    "print(\"read 1:\", some_file.read())\n",
+    "print(\"read 2:\", some_file.read()) #<-- will not print anything\n",
+    "\n",
+    "some_file_again= open(\"test.txt\")\n",
+    "print(\"read 3:\",some_file_again.readline(7))\n",
+    "print(\"read 4:\",some_file_again.readline())\n",
+    "some_file_again.seek(0)\n",
+    "print(\"read 5:\",some_file_again.readline())\n",
+    "\n",
+    "some_file_again.close()\n",
+    "some_file_again = open(\"test.txt\", 'w+')\n",
+    "some_file_again.write(\"This is the second test string.\\nline2\\nline3\")\n",
+    "some_file_again.flush()\n",
+    "some_file_again.seek(0)\n",
+    "print(\"read 6:\",some_file_again.readlines(0))\n",
+    "some_file_again.seek(0)\n",
+    "print(\"read 7:\",some_file_again.readlines(1))\n",
+    "print(\"read 8:\",some_file_again.readlines(2))\n",
+    "print(\"read 9:\",some_file_again.readlines(3))\n",
+    "print(\"read 10:\",some_file_again.readlines(0))"
    ]
   }
  ],
